assetsSource/css/layout/SiteHeader/SiteHeader.1350.pcss
.SiteHeader__ContentInner--HasFeaturedImage {
    max-width: 1520px;
    padding: 36px 16px 0 16px;
}

.SiteHeader__ContentPrimary--HasFeaturedImage,
.SiteHeader__FeaturedImage {
    display: inline-block;
    max-width: 50%;
    position: relative;
    text-align: left;
    vertical-align: top;
}

.SiteHeader__ContentPrimary--HasFeaturedImage {
    padding-top: 0;
    padding-left: 40px;
    right: -50%;
}

.SiteHeader__FeaturedImage {
    left: -50%;
    margin-bottom: -4px;
}

.SiteHeader__ContentInner {
    margin: 0 auto;
    max-width: 1400px;
    position: relative;
}

.SiteHeader__CTAGroup {
    margin-bottom: -16px;
}

.SiteHeader__FeaturedImage--HasSize-Half {
    text-align: center;
    width: 684px;
}

.SiteHeader__FeaturedImage--HasSize-Half .SiteHeader__FeaturedImageTag {
    max-width: 400px;
}

